--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,23 +13,23 @@
         android:theme="@style/Theme.Activity">
         <receiver
             android:name=".SmsReceiver">
-            <intent-filter>
-                <action android:name="android.provider.Telephony.SMS_RECEIVED"></action>
-            </intent-filter>
+
         </receiver>
 
         <activity android:name=".AsyncActivity">
+
+        </activity>
+        <activity android:name=".RecycleActivity">
+
+        </activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RecycleActivity">
-
-        </activity>
-        <activity android:name=".HomeActivity" />
-        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
